fix: rotation tablet

--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,32 @@ body {
 	font-family: 'Times New Roman', Times, serif;
 	margin: 0;
 	padding: 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	height: 100vh;
-	background: #f0f0f0;
+	background: #fff;
 }
 
 .banner {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	width: 100%;
 	max-width: 1200px;
@@ -20,27 +35,44 @@ body {
 }
 
 .shelves {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: start;
+	-ms-flex-pack: start;
 	justify-content: start;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
-
 	width: 211px;
 	height: 431px;
-
-	background-image: url('./images/stuf/dCounter.svg');
+	background-image: url('./images/stuf/dCounter.jpg');
 	background-position: center;
 	background-size: contain;
 	background-repeat: no-repeat;
 }
 
 .shelves > div {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	gap: 5px;
+	width: -webkit-fit-content;
+	width: -moz-fit-content;
 	width: fit-content;
 	max-width: 211px;
+	height: -webkit-fit-content;
+	height: -moz-fit-content;
 	height: fit-content;
 }
 
@@ -61,18 +93,33 @@ div .shelves__three-shelf {
 	position: relative;
 	top: 0;
 	left: 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-box-align: end;
+	-ms-flex-align: end;
 	align-items: end;
 	max-width: 76px;
 	height: 100%;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+	cursor: -webkit-grab;
 	cursor: grab;
+	-webkit-transition: -webkit-transform 0.3s ease;
+	transition: -webkit-transform 0.3s ease;
+	-o-transition: transform 0.3s ease;
 	transition: transform 0.3s ease;
+	transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 
 .product:active {
+	cursor: -webkit-grabbing;
 	cursor: grabbing;
+	-webkit-transform: scale(1.1);
+	-ms-transform: scale(1.1);
 	transform: scale(1.1);
 }
 
@@ -96,16 +143,27 @@ div .shelves__three-shelf {
 	max-width: 100%;
 	height: auto;
 	max-height: 100%;
+	-o-object-fit: contain;
 	object-fit: contain;
+	-webkit-transition: -webkit-transform 0.3s ease;
+	transition: -webkit-transform 0.3s ease;
+	-o-transition: transform 0.3s ease;
 	transition: transform 0.3s ease;
+	transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 
 .product img:hover {
+	-webkit-transform: scale(1.08);
+	-ms-transform: scale(1.08);
 	transform: scale(1.08);
 }
 
 .cart-area {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
 	position: relative;
 	z-index: 300;
@@ -129,20 +187,28 @@ div .shelves__three-shelf {
 }
 
 .cart-area.hovered.cart-area::before {
+	-webkit-transform: scale(1.02);
+	-ms-transform: scale(1.02);
 	transform: scale(1.02);
 	opacity: 0.8;
 }
 
 .cart__wrp {
-	width: 186px;
+	width: 179px;
 	height: 140px;
 	position: relative;
 	right: -18px;
 	top: -45px;
 	z-index: 0;
 	overflow: hidden;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -150,12 +216,18 @@ div .shelves__three-shelf {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	right: -18px;
+	right: 0px;
 	top: 0px;
 	z-index: 20;
 	overflow: hidden;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -163,10 +235,31 @@ div .shelves__three-shelf {
 	position: absolute;
 	z-index: -1;
 	bottom: 134px;
-	left: 73px;
+	left: 95px;
+	width: -webkit-fit-content;
+	width: -moz-fit-content;
 	width: fit-content;
-	height: 96%;
+	height: 40%;
+	-webkit-transition: -webkit-transform 0.3s ease;
+	transition: -webkit-transform 0.3s ease;
+	-o-transition: transform 0.3s ease;
 	transition: transform 0.3s ease;
+	transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.cart__img.img.dragging:nth-child(2) {
+	left: 0px;
+}
+.cart__img.img.dragging:nth-child(3) {
+	left: 42px;
+	-webkit-transform: rotate(-23deg);
+	-ms-transform: rotate(-23deg);
+	transform: rotate(-23deg);
+}
+.cart__img.img.dragging:nth-child(4) {
+	-webkit-transform: rotate(10deg);
+	-ms-transform: rotate(10deg);
+	transform: rotate(10deg);
 }
 
 #checkout-button {
@@ -174,6 +267,8 @@ div .shelves__three-shelf {
 	z-index: 400;
 	bottom: 107px;
 	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
 	transform: translateX(-50%);
 	padding: 19px 18px;
 	font-size: 18px;
@@ -185,14 +280,43 @@ div .shelves__three-shelf {
 	border: 1px solid #fce000;
 	border-radius: 16px;
 	cursor: pointer;
+	-webkit-transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
+	transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
+	-o-transition: opacity 0.3s ease, transform 0.3s ease;
 	transition: opacity 0.3s ease, transform 0.3s ease;
+	transition: opacity 0.3s ease, transform 0.3s ease,
+		-webkit-transform 0.3s ease;
+	transition: opacity 0.3s ease, transform 0.3s ease,
+		-webkit-transform 0.3s ease;
+	transition: opacity 0.3s ease, transform 0.3s ease,
+		-webkit-transform 0.3s ease;
+	transition: opacity 0.3s ease, transform 0.3s ease,
+		-webkit-transform 0.3s ease;
+	transition: opacity 0.3s ease, transform 0.3s ease,
+		-webkit-transform 0.3s ease;
+	transition: opacity 0.3s ease, transform 0.3s ease,
+		-webkit-transform 0.3s ease;
+	-webkit-animation: blink 2s infinite;
 	animation: blink 2s infinite;
 }
 
 #checkout-button:hover {
 	border: 1px solid #ff8810;
+	-webkit-animation: none;
 	animation: none;
 }
+@-webkit-keyframes blink {
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.5;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
 @keyframes blink {
 	0% {
 		opacity: 1;
@@ -204,6 +328,7 @@ div .shelves__three-shelf {
 		opacity: 1;
 	}
 }
+
 .hidden {
 	display: none;
 }
@@ -213,7 +338,7 @@ div .shelves__three-shelf {
 	pointer-events: auto;
 }
 
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-width: 800px) and (max-height: 450px) {
 	.banner {
 		width: 180px;
 		height: 480px;
@@ -262,18 +387,38 @@ div .shelves__three-shelf {
 	}
 
 	.cart__wrp {
-		width: 70%;
+		width: 62%;
 		height: 92%;
 		right: -7px;
 		top: 11px;
 	}
 
+	.cart__wrp img.dragging {
+		height: -webkit-fit-content;
+		height: -moz-fit-content;
+		height: fit-content;
+	}
+
+	.cart__img.img.dragging:nth-child(3) {
+		left: 28px;
+		height: -webkit-fit-content;
+		height: -moz-fit-content;
+		height: fit-content;
+	}
+	.cart__img.img.dragging:nth-child(4) {
+		left: 65px;
+		height: -webkit-fit-content;
+		height: -moz-fit-content;
+		height: fit-content;
+	}
 	.cart {
 		right: 0px;
 		top: 0px;
 	}
 
 	#checkout-button {
+		font-size: 16px;
 		bottom: -80px;
+		width: 100%;
 	}
 }
